# netbox-automation

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  config.yaml.local  pyproject.toml
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/intel/: api-map.json  apis.json  arch-decisions.json  arch.md  deps.json  file-roles.json  files.json  stack.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-discovery/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-VERIFICATION.md  VERIFICATION.md
.planning/phases/03-review/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/netbox_auto/: __init__.py  cli.py  config.py  database.py  discovery.py  dns.py  models.py  netbox.py  push.py  reconcile.py
tests/: conftest.py
tests/e2e/: __init__.py  test_cli.py
tests/integration/: __init__.py  test_collectors.py  test_dns.py  test_netbox.py
tests/unit/: __init__.py  test_config.py  test_discovery.py  test_models.py  test_reconcile.py
(+25 files in other folders)
