[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-auto"
version = "0.1.0"
description = "Network discovery and NetBox population tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kevin Blalock"}
]

dependencies = [
    "typer[all]>=0.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "librouteros>=3.2",
    "proxmoxer>=2.0",
    "requests>=2.0",
    "scapy>=2.5",
    "flask>=3.0",
    "pynetbox>=7.0",
    "paramiko>=3.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "types-PyYAML",
    "types-paramiko",
]

[project.scripts]
netbox-auto = "netbox_auto.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = ["typer.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
